--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "angular": "~1.3.14",
-    "ui-router": "~0.2.13",
     "angular-mocks": "~1.3.14"
+  },
+  "dependencies": {
+    "angular": "~1.4.0",
+    "ui-router": "~0.2.13",
+    "jquery": "~2.1.4",
+    "angular-bootstrap": "~0.13.2",
+    "bootstrap-sass": "~3.3.5"
   }
 }
