--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "bootstrap-sass": "~3.3.5",
     "font-awesome": "~4.4.0",
     "restangular": "~1.5.1",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "angular-sanitize": "~1.4.3"
   }
 }
