tune gulp scripts

--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "protractor": "^2.0.0",
     "sinon": "^1.12.1",
     "sinon-chai": "^2.6.0",
-    "typescript": "^1.4.1"
-  },
-  "dependencies": {
+    "typescript": "^1.4.1",
     "gulp-flatten": "^0.1.1",
     "gulp-sourcemaps": "^1.5.2"
   }
